clusters/talos-robbinsdale/apps/opencost/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: opencost
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: private
      namespace: envoy-gateway-system
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: ts
      namespace: envoy-gateway-system
  hostnames:
    - "opencost.rajsingh.info"
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: opencost
          port: 9090
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
